--- a/templates/login.html
+++ b/templates/login.html
@@ -5,13 +5,20 @@
   <title>BTS Monitoring — Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="icon" type="image/x-icon" href="/static/img/logo.png" />
+
 </head>
 
 <body class="login-page">
 
   <div class="login-container glass-panel">
     <div class="login-header">
-      <img src="/static/img/logo.png" alt="BTS Logo" class="login-logo" />
+      <div class="brand">
+        <div class="logos">
+            <img src="/static/img/light_cylogo.png" alt="Logocy" class="logo" />
+            <img src="/static/img/logo.svg" alt="Logocy" class="logo" />
+        </div>
+      </div>
       <h1 class="login-title">Ador Monitoring System</h1>
       <p class="login-subtitle">Sign in to access your control dashboard</p>
     </div>
