--added other test type logic --added write plc status logic --added write to database

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -325,6 +325,24 @@
                 <td><input type="text" name="header_temperature_difference" placeholder="e.g. Temp Difference ∆T (Manual)" required /></td>
                 <td><input type="text" name="header_sheet_name_temperature_difference" placeholder="e.g. 0" required /></td>
               </tr>
+              <tr>
+                <td>10</td>
+                <td>END SOC</td>
+                <td><input type="text" name="header_end_soc" placeholder="e.g. End SOC (%)" required /></td>
+                <td><input type="text" name="header_sheet_name_end_soc" placeholder="e.g. 0" required /></td>
+              </tr>
+              <tr>
+                <td>11</td>
+                <td>HRC</td>
+                <td><input type="text" name="header_hrc" placeholder="e.g. HRC" required /></td>
+                <td><input type="text" name="header_sheet_name_hrc" placeholder="e.g. 0" required /></td>
+              </tr>
+              <tr>
+                <td>12</td>
+                <td>HRD</td>
+                <td><input type="text" name="header_hrd" placeholder="e.g. HRD" required /></td>
+                <td><input type="text" name="header_sheet_name_hrd" placeholder="e.g. 0" required /></td>
+              </tr>
             </tbody>
           </table>
           <div class="form-actions">
